Added collaboration section

--- a/320final2.Rmd
+++ b/320final2.Rmd
@@ -240,3 +240,6 @@ augment(lmfit2) %>%
 
 ## Conclusion
 In the end, we learned how to import and view data in r, tried to find some interesting details about the data, and then tried to fit a model to those observations to see if we could accurately predict prices of tickets. Altough we did not end up finding a perfect linear model, often times we will never end up finding a perfect model. What we have done however, is establish how to determine what makes a model good and we tried both location and make to try and predict ticket prices. We established that altough some sort of relationship exists, it cannot be entirely explained with just a linear model. In the future, we can try other types of regression and machine learning models to try and find one with the best fit.
+
+## Collaboration
+Overall, the group did their best to split up the work evenly. A Google Doc was made to plan out what each part would consist of. Samuel Hui worked on the data curation, parsing, and management sections. Josh Nail wrote the sections on exploratory data analysis and provided some visualizations with the use of leaflet and ggplot. Achyut developed the pipeline for the machine learning analysis with linear regression and hypothesis testing sections. Even though we all had our own separate sections of the project, we still asked each other questions and collaborated so that the entirety of the project met everyone’s standards. 
